// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityContent can display a bundle for Juju 2 1`] = `
<div
  className="entity-content"
>
  <div
    className="row"
  >
    <div
      className="inner-wrapper"
    >
      <div
        className="eight-col"
      >
        <EntityContentDescription
          changeState={[Function]}
          description="HA Django cluster."
          includeHeading={true}
        />
        <EntityContentDiagram
          clearLightbox={[Function]}
          diagramUrl="testRef"
          displayLightbox={[Function]}
          isExpandable={true}
          isRow={false}
          title="django cluster"
        />
        <EntityContentReadme
          addNotification={[Function]}
          changeState={[Function]}
          entityModel={
            Object {
              "get": [Function],
              "getAttrs": [Function],
              "set": [Function],
              "toEntity": [Function],
            }
          }
          getFile={[Function]}
          hash="readme"
          scrollCharmbrowser={[Function]}
        />
        <div
          className="entity-content__configuration"
          id="configuration"
        >
          <h3
            className="entity-content__header"
          >
            Bundle configuration
          </h3>
          <div>
            <AccordionSection
              key="gunicorn"
              title={
                <span>
                  <img
                    alt="gunicorn"
                    className="entity-content__config-image"
                    width="26"
                  />
                  gunicorn
                </span>
              }
            >
              <div
                className="entity-content__config-description"
              >
                <div
                  className="entity-content__config-option"
                  key="name0"
                >
                  <dt
                    className="entity-content__config-name"
                  >
                    name
                  </dt>
                  <dd
                    className="entity-content__config-description"
                  >
                    <p>
                      title
                    </p>
                  </dd>
                </div>
                <div
                  className="entity-content__config-option"
                  key="active1"
                >
                  <dt
                    className="entity-content__config-name"
                  >
                    active
                  </dt>
                  <dd
                    className="entity-content__config-description"
                  >
                    <p>
                      <Component />
                    </p>
                  </dd>
                </div>
              </div>
            </AccordionSection>
            <AccordionSection
              key="django"
              title={
                <span>
                  <img
                    alt="django"
                    className="entity-content__config-image"
                    width="26"
                  />
                  django
                </span>
              }
            />
          </div>
        </div>
      </div>
      <div
        className="four-col last-col"
      >
        <ExpertContactCard
          analytics={
            Object {
              "addCategory": [Function],
              "sendEvent": [Function],
            }
          }
          expert="test-owner"
          staticURL="http://example.com"
        />
        <div
          className="section section__contribute"
        >
          <h3
            className="section__title"
          >
            Contribute
          </h3>
          <ul
            className="section__list"
          >
            <li
              className="section__list-item"
            >
              <a
                className="link link--cold"
                href="https://code.launchpad.net/~charmers/charms/bundles/django-cluster/bundle"
                target="_blank"
              >
                Project homepage
              </a>
            </li>
          </ul>
        </div>
        <EntityFiles
          apiUrl="http://example.com"
          entityModel={
            Object {
              "get": [Function],
              "getAttrs": [Function],
              "set": [Function],
              "toEntity": [Function],
            }
          }
        />
        <div
          className="entity-content__card section clearfix"
        >
          <h3
            className="section__title"
          >
            Embed this charm
          </h3>
          <p>
            Add this card to your website by copying the code below. 
            <a
              className="entity-content__card-cta"
              href="https://jujucharms.com/community/cards"
              target="_blank"
            >
              Learn more
            </a>
            .
          </p>
          <CopyToClipboard
            analytics={
              Object {
                "addCategory": [Function],
                "sendEvent": [Function],
              }
            }
            className="copy-to-clipboard"
            value="<script src=\\"https://assets.ubuntu.com/v1/juju-cards-v1.7.2.js\\"></script>
<div class=\\"juju-card\\"  data-id=\\"django-cluster\\"></div>"
          />
          <h4>
            Preview
          </h4>
          <div
            className="juju-card"
            data-id="django-cluster"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EntityContent can display a charm 1`] = `
<div
  className="entity-content"
>
  <div
    className="row"
  >
    <div
      className="inner-wrapper"
    >
      <div
        className="eight-col"
      >
        <EntityContentDescription
          changeState={[Function]}
          description="Django framework."
          includeHeading={true}
        />
        <div
          className="entity-content__terms"
        >
          <div
            className="entity-content__metadata"
          >
            <h4
              className="entity-content__metadata-title"
            >
              Tags:
            </h4>
             
            <a
              className="link link--cold"
              data-id="database"
              key="database0"
              onClick={[Function]}
            >
              database
            </a>
          </div>
        </div>
        <EntityContentReadme
          addNotification={[Function]}
          changeState={[Function]}
          entityModel={
            Object {
              "get": [Function],
              "getAttrs": [Function],
              "set": [Function],
              "toEntity": [Function],
            }
          }
          getFile={[Function]}
          hash="readme"
          scrollCharmbrowser={[Function]}
        />
        <div
          className="entity-content__configuration"
          id="configuration"
        >
          <h3
            className="entity-content__header"
          >
            Configuration
          </h3>
          <dl>
            <EntityContentConfigOption
              key="username"
              option={
                Object {
                  "default": "spinach",
                  "description": "Your username",
                  "name": "username",
                  "type": "string",
                }
              }
            />
            <EntityContentConfigOption
              key="password"
              option={
                Object {
                  "default": "abc123",
                  "description": "Your password",
                  "name": "password",
                  "type": "string",
                }
              }
            />
          </dl>
        </div>
      </div>
      <div
        className="four-col last-col"
      >
        <div
          className="section section__contribute"
        >
          <h3
            className="section__title"
          >
            Contribute
          </h3>
          <ul
            className="section__list"
          >
            <li
              className="section__list-item"
            >
              <a
                className="link link--cold"
                href="https://bugs.launchpad.net/charms/+source/django"
                target="_blank"
              >
                Submit a bug
              </a>
            </li>
          </ul>
        </div>
        <EntityResources
          apiUrl="http://example.com"
          entityId="cs:django"
          resources={
            Array [
              Object {
                "resource": "one",
              },
            ]
          }
        />
        <EntityContentRelations
          analytics={
            Object {
              "addCategory": [Function],
              "sendEvent": [Function],
            }
          }
          changeState={[Function]}
          relations={
            Object {
              "provides": Object {
                "http": Object {
                  "interface": "http",
                  "name": "http",
                },
              },
              "requires": Object {
                "cache": Object {
                  "interface": "cache",
                  "name": "cache",
                },
              },
            }
          }
        />
        <EntityFiles
          apiUrl="http://example.com"
          entityModel={
            Object {
              "get": [Function],
              "getAttrs": [Function],
              "set": [Function],
              "toEntity": [Function],
            }
          }
        />
        <div
          className="entity-content__card section clearfix"
        >
          <h3
            className="section__title"
          >
            Embed this charm
          </h3>
          <p>
            Add this card to your website by copying the code below. 
            <a
              className="entity-content__card-cta"
              href="https://jujucharms.com/community/cards"
              target="_blank"
            >
              Learn more
            </a>
            .
          </p>
          <CopyToClipboard
            analytics={
              Object {
                "addCategory": [Function],
                "sendEvent": [Function],
              }
            }
            className="copy-to-clipboard"
            value="<script src=\\"https://assets.ubuntu.com/v1/juju-cards-v1.7.2.js\\"></script>
<div class=\\"juju-card\\"  data-id=\\"trusty/django-123\\"></div>"
          />
          <h4>
            Preview
          </h4>
          <div
            className="juju-card"
            data-id="trusty/django-123"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EntityContent can display plans 1`] = `
<div
  className="entity-content"
>
  <div
    className="row"
  >
    <div
      className="inner-wrapper"
    >
      <div
        className="eight-col"
      >
        <EntityContentDescription
          changeState={[Function]}
          description="Django framework."
          includeHeading={true}
        />
        <div
          className="entity-content__terms"
        >
          <div
            className="entity-content__metadata"
          >
            <h4
              className="entity-content__metadata-title"
            >
              Tags:
            </h4>
             
            <a
              className="link link--cold"
              data-id="database"
              key="database0"
              onClick={[Function]}
            >
              database
            </a>
          </div>
        </div>
        <EntityContentReadme
          addNotification={[Function]}
          changeState={[Function]}
          entityModel={
            Object {
              "get": [Function],
              "getAttrs": [Function],
              "set": [Function],
              "toEntity": [Function],
            }
          }
          getFile={[Function]}
          hash="readme"
          scrollCharmbrowser={[Function]}
        />
      </div>
      <div
        className="four-col last-col"
      >
        <div
          className="entity-content__plans"
          id="plans"
        >
          <div
            className="entity-content__plan"
            key="plan10"
          >
            <div
              className="plan-block__top-title"
            >
              Managed solution
            </div>
            <div
              className="entity-content__plan-content"
            >
              <h3
                className="entity-content__plan-title"
              >
                test/price1
              </h3>
              <p
                className="entity-content__plan-description"
              >
                <span
                  className="entity-content__plan-url"
                >
                  plan1
                </span>
                description1
              </p>
            </div>
          </div>
          <div
            className="entity-content__plan"
            key="plan21"
          >
            <div
              className="plan-block__top-title"
            >
              Managed solution
            </div>
            <div
              className="entity-content__plan-content"
            >
              <h3
                className="entity-content__plan-title"
              >
                price2;
              </h3>
              <p
                className="entity-content__plan-description"
              >
                <span
                  className="entity-content__plan-url"
                >
                  plan2
                </span>
                description2
              </p>
            </div>
          </div>
          <div
            className="entity-content__plan"
            key="plan32"
          >
            <div
              className="plan-block__top-title"
            >
              Managed solution
            </div>
            <div
              className="entity-content__plan-content"
            >
              <h3
                className="entity-content__plan-title"
              >
                test/price3;price3b
              </h3>
              <p
                className="entity-content__plan-description"
              >
                <span
                  className="entity-content__plan-url"
                >
                  plan3
                </span>
                description3
              </p>
            </div>
          </div>
        </div>
        <ExpertContactCard
          analytics={
            Object {
              "addCategory": [Function],
              "sendEvent": [Function],
            }
          }
          expert="test-owner"
          staticURL="http://example.com"
        />
        <div
          className="section section__contribute"
        >
          <h3
            className="section__title"
          >
            Contribute
          </h3>
          <ul
            className="section__list"
          >
            <li
              className="section__list-item"
            >
              <a
                className="link link--cold"
                href="https://bugs.launchpad.net/charms/+source/django"
                target="_blank"
              >
                Submit a bug
              </a>
            </li>
          </ul>
        </div>
        <EntityResources
          apiUrl="http://example.com"
          entityId="cs:django"
        />
        <EntityContentRelations
          analytics={
            Object {
              "addCategory": [Function],
              "sendEvent": [Function],
            }
          }
          changeState={[Function]}
          relations={
            Object {
              "provides": Object {
                "http": Object {
                  "interface": "http",
                  "name": "http",
                },
              },
              "requires": Object {
                "cache": Object {
                  "interface": "cache",
                  "name": "cache",
                },
              },
            }
          }
        />
        <EntityFiles
          apiUrl="http://example.com"
          entityModel={
            Object {
              "get": [Function],
              "getAttrs": [Function],
              "set": [Function],
              "toEntity": [Function],
            }
          }
        />
        <div
          className="entity-content__card section clearfix"
        >
          <h3
            className="section__title"
          >
            Embed this charm
          </h3>
          <p>
            Add this card to your website by copying the code below. 
            <a
              className="entity-content__card-cta"
              href="https://jujucharms.com/community/cards"
              target="_blank"
            >
              Learn more
            </a>
            .
          </p>
          <CopyToClipboard
            analytics={
              Object {
                "addCategory": [Function],
                "sendEvent": [Function],
              }
            }
            className="copy-to-clipboard"
            value="<script src=\\"https://assets.ubuntu.com/v1/juju-cards-v1.7.2.js\\"></script>
<div class=\\"juju-card\\"  data-id=\\"trusty/django-123\\"></div>"
          />
          <h4>
            Preview
          </h4>
          <div
            className="juju-card"
            data-id="trusty/django-123"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
